--- a/homework5/Order-app/src/app/components/navigation/navigation.component.html
+++ b/homework5/Order-app/src/app/components/navigation/navigation.component.html
@@ -32,6 +32,13 @@
                 [routerLinkActiveOptions]="{exact: true}"
                 >Orders</a>
             </li>
+            <li>
+                <a
+                routerLink="/add-product"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{exact: true}"
+                >Add Product</a>
+            </li>
         </ul>
     </nav>
 </header>
